<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DocFlow Patient</string>
    
    <!-- Login -->
    <string name="title_login">Welcome to DocFlow</string>
    <string name="subtitle_login">Your personal clinic appointment assistant</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Sign In</string>
    <string name="prompt_no_account">Don\'t have an account? Create one</string>
    
    <!-- Register -->
    <string name="title_register">Create Account</string>
    <string name="subtitle_register">Sign up to book and manage appointments</string>
    <string name="hint_fullname">Full Name</string>
    <string name="hint_phone">Phone Number</string>
    <string name="btn_register">Sign Up</string>
    <string name="prompt_have_account">Already registered? Log In</string>
</resources>
